--- a/app/assets/stylesheets/redesign/pages/_bespoke-bridal-collection.scss
+++ b/app/assets/stylesheets/redesign/pages/_bespoke-bridal-collection.scss
@@ -74,17 +74,29 @@
     }
 
     .content__appInfo {
-      padding: 15px 50px;
+      padding: 15px;
 
       .contentBoxItem__title {
-        margin-top: 0;
         font-size: 3em;
       }
 
     }
 
+    .contentBox__marbleBox .contentBoxItem__title {
+      margin-top: 0;
+      padding-top: 0;
+    }
+
+    .contentBoxItem__ctaWrap {
+      padding-bottom: 0;
+    }
+
     .content__lessMarginImg {
-      margin-bottom: 25px;
+      margin-bottom: 50px 0 65px;
+    }
+
+    .overlapColumnMobile__item .copyWrapper {
+      margin-bottom: 0;
     }
 
   }
